# scpn-mif-core

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  Project.toml  README.md  REUSE.toml  SECURITY.md  conftest.py  go.mod  lake-manifest.json  lakefile.lean  mkdocs.yml  pixi.toml  pyproject.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark-nightly.yml  ci.yml  codeql.yml  docs.yml  formal.yml  fuzz-nightly.yml  mutation-nightly.yml  paper.yml  pre-commit.yml  release.yml  sbom.yml  scorecard.yml  security-audit.yml  stale.yml  synthesis.yml  upstream_nightly.yml  wheels.yml
bench/: README.md  __init__.py  dispatch.toml
bench/kernels/: __init__.py  bench_adc_to_spike_quantiser.py  bench_aer_ingress.py  bench_capacitor_bank.py  bench_daq_bus_mock.py  bench_diagnostic_normalisation.py  bench_diagnostic_stress_inject.py  bench_doppler_kuramoto.py  bench_faraday_recovery.py  bench_kinematic_safety_certificate.py  bench_merge_trigger.py  bench_merge_window.py  bench_merger_campaign.py  bench_moving_frame_upde.py  bench_plasmoid_merger_petri_net.py  bench_pulsed_shot_fsm.py  bench_streaming_trigger.py  bench_trigger_probability.py
bench/results/: .gitkeep  adc_to_spike_quantiser.json  aer_decode_rate.json  aer_spike_buffer.json  belova_merge_parity.json  capacitor_bank.json  daq_pcie_dma_ring_mock.json  daq_udp_multicast_mock.json  diagnostic_normalisation.json  diagnostic_stress_inject.json  doppler_kuramoto.json  faraday_back_emf.json  faraday_recovery_waveform.json  kinematic_safety_certificate.json  merge_window.json  merger_campaign.json  moving_frame_upde.json  plasmoid_merger_petri_net.json  pulsed_shot_fsm.json  streaming_trigger.json  trigger_latency_budget.json  trigger_probability.json
binder/: postBuild  requirements.txt
campaigns/: README.md  faraday_compression_recovery.py  fusion_coupled_merge_trigger.py  merge_preemption_campaign.py
campaigns/results/: faraday_compression_recovery.json  fusion_coupled_merge_trigger.json  merge_preemption.json
cosim/: README.md  __init__.py  aer_cdc_synchroniser.py  fast_veto_gate.py  mif007_adc_to_spike.py  mif008_trigger_fabric.py  stress_to_fabric.py  test_aer_cdc_synchroniser.py  test_fast_veto_gate.py  test_mif007_adc_to_spike.py  test_mif008_trigger_fabric.py  test_stress_to_fabric.py
docs/: index.md
docs/_generated/: benchmark_dashboard.json  capability_manifest.json  capability_snapshot.md  fair_validation_bundle.json  formal_manifest.json  studio_manifest.json  timing_evidence_package.json
docs/adr/: 0001-repository-scope-and-ownership-boundaries.md  0002-multi-language-acceleration-and-dispatch.md  0003-upstream-pending-carriers-and-prescribed-inputs.md  0004-curated-public-api-facade.md  0005-delivered-versus-roadmap-honesty.md  0006-formal-verification-strategy.md  0007-validation-and-benchmark-integrity.md  0008-combinational-fast-veto-lane.md  0009-standards-interop-seams.md  0010-merge-window-predictor-feature-boundary.md  index.md
docs/api/: ecosystem.md  evidence.md  index.md  merge_trigger.md  (+2 more)
examples/: README.md  frc_merge_trigger.py  interop_bridge.py  pulsed_shot_lifecycle.py
go/: README.md
hdl/: README.md
lean/: SCPNMIF.lean
mojo/: aer_decode_rate.mojo  doppler_kuramoto.mojo  faraday_recovery.mojo
notebooks/: README.md  merge_trigger_quickstart.ipynb
paper/: paper.md
schemas/: capability_manifest.schema.json
scpn-mif-rs/: Cargo.toml
scpn-mif-rs/crates/mif-aer/: Cargo.toml
scpn-mif-rs/crates/mif-aer/src/: lib.rs
scpn-mif-rs/crates/mif-core/: Cargo.toml
scpn-mif-rs/crates/mif-core/src/: faraday_recovery.rs  lib.rs
scpn-mif-rs/crates/mif-daq/: Cargo.toml
scpn-mif-rs/crates/mif-daq/src/: lib.rs
scpn-mif-rs/crates/mif-diagnostics/: Cargo.toml
scpn-mif-rs/crates/mif-diagnostics/src/: lib.rs
scpn-mif-rs/crates/mif-ffi/: Cargo.toml  pyproject.toml
scpn-mif-rs/crates/mif-ffi/src/: lib.rs
scpn-mif-rs/crates/mif-fpga/: Cargo.toml
scpn-mif-rs/crates/mif-fpga/src/: lib.rs
scpn-mif-rs/crates/mif-kinematic/: Cargo.toml
scpn-mif-rs/crates/mif-kinematic/benches/: streaming_trigger.rs
scpn-mif-rs/crates/mif-kinematic/src/: doppler_kuramoto.rs  erfc.rs  lib.rs  merge_window.rs  moving_frame_upde.rs  safety_certificate.rs  streaming_trigger.rs  trigger_probability.rs
scpn-mif-rs/crates/mif-kinematic/tests/: mutation_hardening.rs
scpn-mif-rs/crates/mif-lifecycle/: Cargo.toml
scpn-mif-rs/crates/mif-lifecycle/src/: capacitor_bank.rs  lib.rs  merger_campaign.rs  plasmoid_merger.rs  pulsed_shot.rs  types.rs
scpn-mif-rs/crates/mif-types/: Cargo.toml
scpn-mif-rs/crates/mif-types/src/: lib.rs
scpn-mif-rs/fuzz/: .gitignore  Cargo.toml  README.md
scpn-mif-rs/fuzz/fuzz_targets/: decode_aer_observation.rs  decode_daq_frame.rs  normalise_diagnostic_features.rs
studio-web/: .gitignore  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
tests/: __init__.py  conftest.py
tools/: __init__.py  adc_to_spike_reference.py  aer_cdc_synchroniser_reference.py  belova_merge_parity.py  benchmark_dashboard.py  capability_manifest.py  capability_manifest.toml  check_readme_version_mentions.py  check_samsung_workspace.py  check_secrets.py  check_sync_tags.py  check_wheel_contents.py  emit_studio_manifest.py  fair_validation_bundle.py  fast_veto_gate_reference.py  formal_manifest.py  generate_compatibility_matrix.py  preflight.py  run_formal.py  timing_evidence_package.py  trigger_fabric_reference.py  trigger_latency_budget.py  update_dispatch.py  validate_claim_evidence_ledger.py  validate_sota_evidence_ledger.py  verify_version_floors.py
(+264 files in other folders)
