# SPDX-License-Identifier: AGPL-3.0-or-later
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Project: SCPN-MIF-CORE
# Description: Top-level Rust workspace facade.
#
# The full crate workspace lives under `scpn-mif-rs/`, matching the
# `scpn-fusion-rs/`, `scpn-control-rs/` sibling convention. This file
# is a re-export shim so `cargo` invocations at the repository root
# behave intuitively.

[workspace]
resolver = "3"
members = [
    "scpn-mif-rs/crates/mif-types",
    "scpn-mif-rs/crates/mif-core",
    "scpn-mif-rs/crates/mif-kinematic",
    "scpn-mif-rs/crates/mif-lifecycle",
    "scpn-mif-rs/crates/mif-aer",
    "scpn-mif-rs/crates/mif-fpga",
    "scpn-mif-rs/crates/mif-ffi",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Miroslav Sotek <protoscience@anulum.li>"]
license = "AGPL-3.0-or-later"
homepage = "https://www.anulum.li"
repository = "https://github.com/anulum/scpn-mif-core"
readme = "README.md"

[workspace.dependencies]
# Numerical core
ndarray = "0.16"
ndarray-rand = "0.15"
faer = "0.20"
nalgebra = "0.33"
num-complex = "0.4"
num-traits = "0.2"
rand = "0.9"
rand_pcg = "0.9"
rayon = "1.10"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors / logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bridge
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py312"] }
numpy = "0.25"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Bench / test
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 1
