# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Project: SCPN-MIF-CORE
# Description: Python project metadata.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpn-mif-core"
version = "0.0.1"
description = "Deterministic phase synchronisation and hardware synthesis for high-beta pulsed magneto-inertial fusion plasmas"
authors = [
    {name = "Miroslav Sotek", email = "protoscience@anulum.li"},
]
keywords = [
    "magneto-inertial-fusion",
    "field-reversed-configuration",
    "pulsed-plasma",
    "kuramoto-synchronisation",
    "hall-mhd",
    "spiking-neural-network",
    "systemverilog",
    "formal-verification",
    "ultrascale-plus",
    "q8-8",
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "jax>=0.4.30",
    "pydantic>=2.5",
]
requires-python = ">=3.12,<3.13"

[project.urls]
Homepage = "https://github.com/anulum/scpn-mif-core"
Documentation = "https://anulum.github.io/scpn-mif-core/"
Repository = "https://github.com/anulum/scpn-mif-core"
"Bug Tracker" = "https://github.com/anulum/scpn-mif-core/issues"
Discussions = "https://github.com/anulum/scpn-mif-core/discussions"
Changelog = "https://github.com/anulum/scpn-mif-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Sibling-repository install floor. The generated compatibility matrix is the
# source of truth for live sibling readiness and blocker status.
ecosystem = [
    "sc-neurocore-engine>=3.15.25",
    "scpn-phase-orchestrator>=0.8.0",
    "scpn-control>=0.20.7",
    "scpn-fusion-core>=3.9.10",
    "scpn-quantum-control>=0.9.11",
]
dev = [
    "ruff==0.15.17",
    "mypy==2.1.0",
    "bandit==1.9.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "build>=1.2",
    "maturin==1.14.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-include-markdown-plugin>=6.2",
]
formal = [
    "pysmt>=0.9",
    "pyverilog>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["scpn_mif_core*"]

[tool.setuptools.package-data]
scpn_mif_core = ["py.typed", "VERSION"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["lean", "go", "scpn-mif-rs", "hdl"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "N",             # pep8-naming
    "S",             # bandit-light
    "PT",            # pytest-style
    "PIE",           # misc
    "C4",            # comprehensions
]
ignore = [
    "E501",     # line length handled by formatter
    "S101",     # assert is fine in tests
    "RUF003",   # EN DASH in copyright year ranges is the ANULUM branding standard
    "N803",     # SI-unit-suffixed argument names (initial_voltage_V) are intentional scientific convention
    "N815",     # SI-unit-suffixed dataclass field names (capacitance_F, voltage_max_V) likewise
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PT011", "PT012", "E402"]
"bench/**/*.py" = ["S"]
"examples/**/*.py" = ["S"]
"tools/**/*.py" = ["S"]
"conftest.py" = ["S"]
# Parity tests intentionally use `pytest.importorskip` before further imports,
# quote forward references to the runtime-resolved Rust extension module, and
# use the multiplication sign in mathematical prose.
"tests/unit/lifecycle/test_capacitor_bank_rust_parity.py" = ["UP037", "RUF002"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
namespace_packages = true
mypy_path = ["src"]
packages = ["scpn_mif_core"]
exclude = ["lean", "go", "scpn-mif-rs", "hdl", "build", "dist"]

[[tool.mypy.overrides]]
module = ["jax.*", "scipy.*", "pyverilog.*", "pysmt.*", "scpn_mif_core_rs", "scpn_mif_core_rs.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "cosim"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=scpn_mif_core",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=95",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "formal: requires SymbiYosys, nuXmv, or Kind 2",
    "vivado: requires Vivado 2024.2 (MIF_VIVADO_CI=1)",
    "lean: requires Lean 4 lake (MIF_LEAN_CI=1)",
    "preempt_rt: requires PREEMPT_RT kernel (MIF_PREEMPT_RT_CI=1)",
    "hardware: requires physical FPGA / ADC / NV-centre hardware",
    "contract: cross-repository contract test",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jax.*",
    "ignore::PendingDeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "bench", "examples", "lean", "go", "scpn-mif-rs", "hdl"]
skips = ["B101"]  # assert is fine

[tool.coverage.run]
source = ["src/scpn_mif_core"]
branch = true
omit = [
    "*/tests/*",
    "*/bench/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
