# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mif-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core orchestration and shared algorithms for SCPN-MIF-CORE."

[dependencies]
mif-types = { path = "../mif-types" }
ndarray = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
