# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mif-diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Diagnostic signal normalisation kernels for MIF-016."

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
