# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mif-fpga"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "FPGA-side glue: SystemVerilog IR helpers, UltraScale+ target metadata, sub-50-ns trigger composition."

[dependencies]
mif-types = { path = "../mif-types" }
mif-core = { path = "../mif-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
