# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mif-lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Pulsed-shot lifecycle FSM and capacitor-bank state model."

[dependencies]
mif-types = { path = "../mif-types" }
mif-core = { path = "../mif-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
