# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mif-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared types for SCPN-MIF-CORE: FRC equilibrium, capacitor bank, AER spikes, pulse identifiers."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
